kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
  labels:
    name: webapp
spec:
  rules:
  - host: webapp.gulzoo.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp
            port: 
              number: 80
